# Reinforcement-Learning-Playground

./: .gitignore  README.md  RL_REQS.md  changes.md  config.yaml  environment.yaml  pyproject.toml  requirements.txt
MuJoCo/: mujoco_base.py  mujoco_test.py  mujoco_test_with_gym.py
data/: .~lock.Ant-v5_DDPG_10x_gravity_10x_friction.csv#  humanoid.csv
data/critic/: Ant-v5_DDPG_10x_gravity_10x_friction.csv  Ant-v5_DDPG_10x_gravity_10x_friction_0.5_disturb.csv  Ant-v5_DDPG_10x_gravity_normal_friction.csv  (+5 more)
height_field/: README.md  __init__.py  ant_hfield.xml  ant_v5_hfield.py
models_best/: Ant-v5_PPO_CONT_ADV_1.34491_2025-03-09_19-49.pth  Ant-v5_PPO_CONT_ADV_668.99329.pth  Ant-v5_SAC_0.92504.pth  CartPole-v1_PPO_0.95789.pth  CartPole-v1_REINFORCE_0.90521.pth  CartPole-v1_VPG_0.9599.pth  HalfCheetah-v5_PPO_-0.87223_2025-04-11_11-32.pth  Humanoid-v5_PPO_CONT_5.12327.pth  MRPP_Env_PPO_CONT_-61.54312_2025-03-26_21-24.pth  MountainCar-v0_PPO_-0.99609.pth  Pusher-v5_PPO_CONT_-0.51478.pth  Swimmer-v5_PPO_CONT_0.11093.pth
reinforcement_learning_playground/: agent.py  analyze.py  create_env.py  domain_rand.py  get_action.py  get_params.py  get_params_args.py  global_dir.py  isaac_sim.py  replay_buffer.py  tensorboard_setup.py  test.py  test_sb.py  timer.py  train.py  train_multiple.sh  traj_data.py
src/: agent.py  buffer.py  create_env.py  get_action.py  get_params.py  globals.py  humanoid_sim.py  replay_buffer.py  run_agent.py  run_me.py  run_training.py  tensorboard_setup.py  test.py  test_my_sim.py  train.py  train_adv.py  traj_data.py
src/RL_algorithms/: ppo.py  (+7 more)
(+86 files in other folders)
